chatbot/chatbot-svc-atualiza.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-atualiza
  namespace: chatbot
  labels:
    app: chatbot-atualiza
spec:
  selector:
    matchLabels:
      app: chatbot-atualiza
  template:
    metadata:
      labels:
        app: chatbot-atualiza
    spec:
      containers:
        - env:
            - name: APPLICATION_PORT
              value: "8080"
            - name: DB2_USERNAME
              valueFrom:
                secretKeyRef:
                  key: db2-chatbot-username
                  name: db2-chatbot
            - name: DB2_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db2-chatbot-password
                  name: db2-chatbot
            - name: DB2_LIBRARY
              valueFrom:
                secretKeyRef:
                  key: db2-chatbot-library
                  name: db2-chatbot
            - name: POSTGRES_BOS_URL
              valueFrom:
                secretKeyRef:
                  key: postgres-bos-url
                  name: postgres-bos
            - name: POSTGRES_BOS_PORT
              valueFrom:
                secretKeyRef:
                  key: postgres-bos-port
                  name: postgres-bos
            - name: POSTGRES_BOS_DATABASE
              valueFrom:
                secretKeyRef:
                  key: postgres-bos-database
                  name: postgres-bos
            - name: POSTGRES_BOS_USERNAME
              valueFrom:
                secretKeyRef:
                  key: postgres-bos-username
                  name: postgres-bos
            - name: POSTGRES_BOS_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgres-bos-password
                  name: postgres-bos
            - name: ERROR_URI
              value: "http://error-message.error:8080/error/v1/code/"
            - name: ISSUER_URI
              value: "http://auth-token.auth:8080/"
            - name: DRIVER_API_BASE_URL_KM
              value: "http://aldavar-contract-km.aldavar:8080/"
            - name: DRIVER_API_BASE_URL_CONDUTOR
              value: "http://aldavar-driver-check-update.aldavar:8080/"
          name: chatbot-atualiza
          image: 'cr.core-services.leaseplan.systems/0072/chatbot-atualiza:DEV-2.0.x8'
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          resources:
            limits:
              memory: "400Mi"
              cpu: "100m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      imagePullSecrets:
        - name: harbor-docker-creds

---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-atualiza
  namespace: chatbot
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: chatbot-atualiza
